--- a/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -6,5 +6,7 @@ metadata:
 spec:
   parameters:
     privateRepo: foo
+    tenancyGroupName: tenancy-internal
+    iacGroupName: iac
   providerConfigsRef:
     gitlabProvider: gitlab-provider
