--- a/packages/gitlab/compositions/post-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/post-config/resources/definition.yaml
@@ -60,6 +60,11 @@ spec:
                     description: |-
                       The name of the iac gitlab group.
                     default: iac
+                  ciTokenVaultPath:
+                    type: string
+                    description: |-
+                      The path in vault where to push the gitlab ci token.
+                    default: xgitlab/xgitlab_ci_pat
                   tenancyGroupName:
                     type: string
                     description: |-
