--- a/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -10,3 +10,4 @@ spec:
     iacGroupName: iac
   providerConfigsRef:
     gitlabProvider: gitlab-provider
+    kubernetesProvider: kubernetes-provider
