feat: remove the temp naming

--- a/packages/gitlab/compositions/post-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/post-config/resources/definition.yaml
@@ -71,7 +71,7 @@ spec:
                     type: string
                     description: |-
                       The path in vault where to push the gitlab ci token.
-                    default: xgitlab/xgitlab_ci_pat
+                    default: gitlab/gitlab_ci_pat
                   tenancyGroupName:
                     type: string
                     description: |-
