--- a/.github/workflows/xplane_pull_request.yaml
+++ b/.github/workflows/xplane_pull_request.yaml
@@ -68,49 +68,29 @@ jobs:
           set -o pipefail  # Ensure the pipeline returns non-zero if make fails
           make all PACKAGE_NAME=${{ inputs.SUBPATH }} 2>&1 | tee "$BUILD_OUTPUT"
 
-          echo "📋 Build output saved. File size: $(wc -l "$BUILD_OUTPUT" | awk '{print $1}') lines"
+          # Debug the output
+          echo "Checking for validation errors in the build output..."
 
-          # Extract all resource summary lines for detailed inspection
-          grep "Total .* resources:" "$BUILD_OUTPUT" > "$SUMMARY_LINES" || true
+          # Look for failure indicators more broadly
+          if grep -q "failure cases" "$BUILD_OUTPUT"; then
+            # Extract the specific lines for better visibility
+            echo "❌ Found potential validation failures:"
+            grep -B2 -A2 "failure cases" "$BUILD_OUTPUT"
 
-          echo "📋 Summary lines extracted. File size: $(wc -l "$SUMMARY_LINES" | awk '{print $1}') lines"
-          echo "📋 Summary lines content:"
-          cat "$SUMMARY_LINES"
-
-          # Debug: Check for the specific pattern we're looking for
-          echo "🔍 Searching for failure cases pattern..."
-          grep -E "[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$SUMMARY_LINES" || echo "No matches found"
-
-          # Check if any summary line contains non-zero failure cases
-          if grep -q -E "[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$SUMMARY_LINES"; then
-            echo "❌ Validation failed! Found summary lines with failure cases"
-            echo "Failure Case Summaries:"
-            grep -E "[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$SUMMARY_LINES"
-            exit 1
-          else
-            echo "✅ No failure cases found in summary lines"
+            # Extract all lines with counts of failure cases > 0
+            if grep -E "[1-9][0-9]* failure cases" "$BUILD_OUTPUT"; then
+              echo "❌ Validation failed! Found lines with non-zero failure cases"
+              exit 1
+            fi
           fi
 
-          # Debug: Alternative search directly in build output
-          echo "🔍 Alternative search in full build output..."
-          grep -E "Total .* resources:.*[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$BUILD_OUTPUT" || echo "No matches found in build output"
-
-          if grep -q -E "Total .* resources:.*[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$BUILD_OUTPUT"; then
-            echo "❌ Validation failed! Found failure cases in direct build output search"
-            grep -E "Total .* resources:.*[0-9]+ success cases, ([1-9][0-9]*) failure cases" "$BUILD_OUTPUT"
+          # Another approach - count total number of [x] lines which indicate failures
+          FAILURE_COUNT=$(grep -c "\\[x\\]" "$BUILD_OUTPUT" || echo "0")
+          if [ "$FAILURE_COUNT" -gt 0 ]; then
+            echo "❌ Validation failed! Found $FAILURE_COUNT validation errors in the output"
+            grep "\\[x\\]" "$BUILD_OUTPUT"
             exit 1
           fi
-
-          # Check if any summary line contains non-zero missing schemas
-          if grep -q -E "([1-9][0-9]*) missing schemas" "$SUMMARY_LINES"; then
-            echo "❌ Validation failed! Found summary lines with missing schemas"
-            echo "Missing Schema Summaries:"
-            grep -E "([1-9][0-9]*) missing schemas" "$SUMMARY_LINES"
-            exit 1
-          fi
-
-          # Clean up the temporary files
-          rm -f "$BUILD_OUTPUT" "$SUMMARY_LINES"
 
           echo "✅ Validation completed successfully"
 
