--- a/.github/workflows/xplane_workflow_matrix.yaml
+++ b/.github/workflows/xplane_workflow_matrix.yaml
@@ -97,7 +97,7 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.detect-changes.outputs.matrix)}}
       fail-fast: false
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_workflow.yaml@main
+    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_workflow.yaml@chore/test-cicd-branch
     secrets:
       REGISTRY_USERNAME: ${{ github.actor }}
       REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
