--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -54,7 +54,7 @@ jobs:
           echo "Base version: ${VERSION}"
 
   pull-request-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@chore/test-cicd-branch
+    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🧪 PR Preview Package
     needs: [calculate-version]
     if: ${{ github.ref_type != 'tag' && github.ref != 'refs/heads/main' }}
@@ -66,7 +66,7 @@ jobs:
       NEXT_VERSION: ${{ needs.calculate-version.outputs.next_version }}  # Already includes 'v'
 
   release-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@chore/test-cicd-branch
+    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🚀 Release Package
     needs: [calculate-version]
     if: ${{ github.ref == 'refs/heads/main' }}
