--- a/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -8,6 +8,8 @@ spec:
     privateRepo: foo
     tenancyGroupName: tenancy-internal
     iacGroupName: iac
+    gitlabRunnerRoleName: gitlab-runner-role
   providerConfigsRef:
     gitlabProvider: gitlab-provider
     kubernetesProvider: kubernetes-provider
+    vaultProvider: vault-provider
