--- a/packages/gitlab/compositions/post-config/test/providers.yaml
+++ b/packages/gitlab/compositions/post-config/test/providers.yaml
@@ -4,7 +4,7 @@ kind: Provider
 metadata:
   name: provider-kubernetes
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.15.0
+  package: xpkg.upbound.io/upbound/provider-kubernetes:v0
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
@@ -12,3 +12,10 @@ metadata:
   name: provider-gitlab
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-gitlab:v0.10.3
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-vault
+spec:
+  package: xpkg.upbound.io/upbound/provider-vault:v2
