feat: add vault post config resources

--- a/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -5,6 +5,11 @@ metadata:
 spec:
   parameters:
     name: example-postconfig
+    kvPath: "secret"
+    k8sAdminAuthPath: "kubernetes/admin"
+    k8sAdminRoleName: "vault-admin"
+    adminPolicyName: "vault-admin"
+    readKvSecretsPolicyName: "read-all-kv-secrets"
   providerConfigsRef:
     vaultProviderName: vault-provider
   managementPolicies:
